style.css
@font-face {
    font-family: 'brittani';
        src: url('./webfonts/BrittanySignature-LjyZ.otf') format('opentype');
}
@font-face {
    font-family: 'cinzel-deco';
        src: url('./webfonts/CinzelDecorative-Regular.ttf') format('truetype');
}
@font-face {
    font-family: 'cinzel';
        src: url('./webfonts/Cinzel-VariableFont_wght.ttf') format('truetype');
}


/*------------------------------------------------------------
# Global classes
------------------------------------------------------------*/
.flex {
    display: flex;
}

body {
    font-family: 'cinzel', sans-serif;
    font-size: 15px;
    font-weight: normal;
    color: hsl(0, 0%, 90%);
}

@font-face {
    font-family: "mountains";
    src: url(fonts/beyond_the_mountains.ttf);
    src: url(fonts/beyond_the_mountains.otf);
    font-weight: 400;
    /* hi this is the first commit */
}

.d-col-n {
    position: relative;
    width: 100%;
    min-height: 1px;
    padding-right: 15px;
    padding-left: 15px;
    -webkit-box-flex: 0;
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
}

/*------------------------------------------------------------
# site-header
------------------------------------------------------------*/
.home-page {
    background: url(images/middle-cover.jpg) no-repeat;
}

.site-header {
    position: relative;
    width: 100%;
}

.site-header figure {
    margin: 0;
    padding: 0;
}

.site-header figure img {
    max-width: 100%;
}

/*------------------------------------------------------------
## header-bar
------------------------------------------------------------*/
.site-header .header-bar {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 99;
    width: 100%;
    padding: 40px 0;
}

.header-bar .site-branding {
    margin-bottom: 0;
    font-size: 30px;
    font-weight: 800;
}

.header-bar .site-branding a {
    color: hsl(0, 0%, 100%);
    text-decoration: none;
}

/*------------------------------------------------------------
### site-navigation
------------------------------------------------------------*/
/*
  Hamburger Menu
----------------------------------------*/
.hamburger-menu {
    position: relative;
    width: 100%;
    max-width: 24px;
    height: 22px;
    margin-left: auto;
    transition: .5s ease-in-out;
    cursor: pointer;
}

.hamburger-menu span {
    display: block;
    position: absolute;
    height: 2px;
    width: 100%;
    background: #fff;
    border-radius: 10px;
    opacity: 1;
    left: 0;
    transition: .25s ease-in-out;
}

.hamburger-menu span:nth-child(1) {
    top: 2px;
}

.hamburger-menu span:nth-child(2),
.hamburger-menu span:nth-child(3) {
    top: 10px;
}

.hamburger-menu span:nth-child(4) {
    top: 18px;
}

.hamburger-menu.open span:nth-child(1) {
    top: 18px;
    width: 0;
    left: 50%;
}

.hamburger-menu.open span:nth-child(2) {
    transform: rotate(45deg);
}

.hamburger-menu.open span:nth-child(3) {
    transform: rotate(-45deg);
}

.hamburger-menu.open span:nth-child(4) {
    top: 18px;
    width: 0;
    left: 50%;
}

.site-navigation {
    position: absolute;
    top: -11px;
    right: 15px;
    z-index: 9999;
    width: 100%;
    height: 22px;
    overflow: hidden;
    list-style: none;
    transition: all .35s;
    color: hsl(0, 0%, 100%);
}

.site-navigation.show {
    height: auto;
}

.site-navigation ul {
    position: fixed;
    top: 0;
    left: -320px;
    z-index: 9999;
    width: 320px;
    height: 100vh;
    overflow-x: scroll;
    padding: 30px;
    margin: 0;
    background: #050505;
    transition: all 0.35s;
}

.site-navigation.show ul {
    left: 0;
}

.site-navigation ul li {
    display: block;
    padding: 15px 0;
}

.site-navigation ul li a {
    display: block;
    color: #fff;
    transition: all 0.35s;
    text-decoration: none;
    font-size: 14px;
    padding-left: 40px;
}

@media screen and (min-width: 992px) {
    .header-bar .site-branding {
        margin-left: 35px;
    }

    .site-navigation {
        position: relative;
        top: auto;
        right: auto;
        height: auto;
        padding-right: 35px;
        background: transparent;
    }

    .site-navigation ul {
        display: flex;
        flex-wrap: wrap;
        justify-content: flex-end;
        align-items: center;
        position: relative;
        top: auto;
        left: auto;
        width: 100%;
        height: auto;
        padding: 0;
        overflow: auto;
        background: transparent;
    }

    .site-navigation ul li {
        padding: 0;
    }

    .site-navigation ul li:nth-last-of-type(1) {
        padding-left: 60px;
    }

    .site-navigation ul li a {
        color: #fff;
    }
}

/*------------------------------------------------------------
# hero
-----------------------------------------------------------*/
.hero-content {
    padding: 220px 0;
    background: url("images/cover.jpg") no-repeat;
    background-size: cover;
    background-position: center;
}

.hero-content .entry-header {
    position: relative;
    text-align: center;
}

.hero-content .entry-header h2 {
    padding: 50px;
    margin: 0;
    font-family: 'cinzel-deco';
    font-size:120px;
    background: -webkit-linear-gradient(#C8A25D, #504125);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.hero-content .entry-header .entry-meta-date {
    width: 100%;
    margin-bottom: 10px; 
    font-family: 'cinzel', 'cinzel-deco';
    font-size: 30px;
    font-weight: 500;
    color: hsl(0, 0%, 90%);
    text-align: center;
}

@media screen and (min-width: 992px) {
    .hero-content .entry-header h2 {
        font-size: 172px;
    }

    .hero-content .entry-header .entry-meta-date {
        top: 60px;
    }
}

/*------------------------------------------------------------
## countdown
------------------------------------------------------------*/
.countdown {
    margin-top: 40px;
}

.countdown-holder {
    min-width: 150px;
    margin-bottom: 30px;
}
/* ... */

